chore: WSC-1407 replace File objects with InputStream
Co-authored-by: Noman <noman.alishaukat@zextras.com>